# cola-worker-test

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml  docs.yml
docs/: Doxyfile  README.md
include/: IWorkerAction.h  PrintWorkerAction.h  cola.h  cola.ipp  i_worker_action.h  logger.h  print_worker_action.h  worker.h  worker.ipp
scripts/: build.ps1  build.sh  generate_docs.sh
src/: cola.cpp  logger.cpp  main.cpp  worker.cpp
tests/: test_main.cpp
